--- a/blog/templates/base_blog.html
+++ b/blog/templates/base_blog.html
@@ -3,9 +3,9 @@
 <html>
 <head>
 <title>Django blog</title>
-<link href="https://fonts.googleapis.com/css?family=\
-Source+Sans+Pro:400" rel="stylesheet">
-<link href="{% static 'css/base.css' %}" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesh\
+eet">
+<link href="{% static 'css/base.css' %}" rel="stylesheet"s>
 </head>
 <body>
 <div>
@@ -17,6 +17,13 @@ Source+Sans+Pro:400" rel="stylesheet">
 <a href="{% url 'post_new' %}">+ New Blog Post</a>
 </div>
 </header>
+{% if user.is_authenticated %}
+<p>Hi {{ user.username }}!</p>
+    <p><a href="{% url 'logout' %}">Log out</a></p>
+{% else %}
+<p>You are not logged in.</p>
+<a href="{% url 'login' %}">Log In</a>
+{% endif %}
 {% block content %}
 {% endblock content %}
 </div>
